--- a/dubstext.html
+++ b/dubstext.html
@@ -3,11 +3,16 @@
 </head>
 
 <body>
-  {{> hello}}
+  {{> noises}}
 </body>
 
-<template name="hello">
-  <h1>Hello World!</h1>
-  {{greeting}}
-  <input type="button" value="Click" />
+<template name="noises">
+  {{#each allNoises}}
+    {{> noise}}
+  {{/each}}
+</template>
+<template name="noise">
+  <span class="blinky absolute" style="left:{{x}}px;top:{{y}}px">
+    {{text}}
+  </span>
 </template>
