--- a/dubstext.html
+++ b/dubstext.html
@@ -20,14 +20,15 @@
   </div>
 </template>
 <template name="newNoise">
-  <span class="bordered absolute" style="left:{{x}}px;top:{{y}}px">
+  <span class="bordered absolute" style="left:{{x}}px;top:{{y}}px;">
     text: <input id="text" /><br>
     speed: <input id="speed" value="200" /><br>
+    size: <input id="size" value="20" /><br>
     <center><input id="submit" type="submit" value="add dubsteb noise" /></center>
   </span>
 </template>
 <template name="noise">
-  <span class="blinky blinky-{{speed}} absolute" style="left:{{x}}px;top:{{y}}px">
+  <span class="blinky blinky-{{speed}} absolute" style="left:{{x}}px;top:{{y}}px;font-size:{{size}}px">
     {{text}}
   </span>
 </template>
