--- a/dubstext.html
+++ b/dubstext.html
@@ -21,9 +21,9 @@
 </template>
 <template name="newNoise">
   <span class="bordered absolute" style="left:{{x}}px;top:{{y}}px;">
-    text: <input id="text" /><br>
-    speed: <input id="speed" value="200" /><br>
-    size: <input id="size" value="20" /><br>
+    ONOMONOPAEIA: <input id="text" /><br>
+    BLINKINESS: <input id="speed" value="200" /><br>
+    BIGNESS: <input id="size" value="20" /><br>
     <center><input id="submit" type="submit" value="add dubsteb noise" /></center>
   </span>
 </template>
